Remove duplicate spelling suggestions, improve styling (#1020)

--- a/themes/finna2/less/finna/search.less
+++ b/themes/finna2/less/finna/search.less
@@ -317,8 +317,9 @@ mark, .highlight {
 }
 
 .spelling-suggestions {
-  margin-top: 10px;
-  font-size: 1.1em;
+  margin-top: 1em;
+  margin-bottom: 1em;
+  font-size: 1.2em;
   a {
     margin-right: 5px;
   }
