Fix personal data processing basis.

--- a/themes/finna2/templates/content/register_details_en-gb.phtml
+++ b/themes/finna2/templates/content/register_details_en-gb.phtml
@@ -34,7 +34,7 @@
   <p>We use your personal information to maintain the unique identity of our customers and to identify users when they log onto Finna. We also use personal information to be able to provide users with customer services and personalized services on Finna. An example of a personalized service is the new entry alerts service that allows users to receive emails about new references related to their searches. Information is collected and managed for the execution of the Finna service at the National Library of Finland and CSC – IT Centre for Science (service providers).</p>
   <p>Additionally, we use the personal data of our users to monitor the use of the service via an analytical system. The analytical system used in our usage analyses is configured to anonymize the user's IP address by resetting the last two octets of the IP address to zero. We use the analytical system on the servers of CSC - IT Centre for Science so that tracking data cannot be leaked out of this safe environment.</p>
   <p>When logging onto this online service, information about the event (e.g. the user’s IP address) is stored temporarily for processing.</p>
-  <p>This processing of personal data is based on the legitimate interest / general interest of the data controller.</p>
+  <p>This processing of personal data is based on the legitimate interest of the data controller.</p>
 
   <h3>5. Register contents</h3>
   <h4>Basic user information</h4>
@@ -92,10 +92,10 @@
 
   <h3>9. Automated processing of personal data and profiling</h3>
   <p>The service does not use automated decision-making or profiling based on personal information.</p>
-  
+
   <h3>10. Regular information sharing</h3>
   <p>The service processes information that is transferred while using the library’s service interface. This information is processed in conjunction with activities like loaning and renewing materials, reserving items and making or browsing payments. Personal information is forwarded to the library system where the library system administrator is responsible for their management.</p>
-  
+
   <h3>11. Transfer of information outside the EU or EEA</h3>
   <p>Information is not transferred outside the EU or EEA</p>
 
