--- a/themes/finna2/templates/content/register_details_fi.phtml
+++ b/themes/finna2/templates/content/register_details_fi.phtml
@@ -36,7 +36,7 @@
   <p>Käyttäjien henkilötietoja käsitellään lisäksi palvelun käytön seuraamiseksi analytiikkajärjestelmällä. Käyttöanalyyseissä käytettävä analytiikkajärjestelmä on konfiguroitu niin, että käyttäjän IP-osoite anonymisoidaan. Se tapahtuu nollaamalla IP-osoitteen kaksi viimeistä oktettia.</p>
   <p>Analytiikkajärjestelmää käytetään CSC - Tieteen tietotekniikan keskus Oy:n  palvelimilla niin, etteivät jäljitystiedot pääse turvallisen ympäristön ulkopuolelle.</p>
   <p>Kun käyttäjä tulee tähän verkkopalveluun, tieto tapahtumasta (mm. IP-osoite) tallentuu väliaikaisesti käsiteltäväksi.</p>
-  <p>Käsittelyn perusteena on rekisterinpitäjän oikeutettu etu/yleinen etu.</p>
+  <p>Käsittelyn perusteena on rekisterinpitäjän oikeutettu etu.</p>
 
   <h3>5. Rekisterin tietosisältö</h3>
   <h4>Käyttäjän perustiedot</h4>
