--- a/themes/finna2/templates/content/register_details_sv.phtml
+++ b/themes/finna2/templates/content/register_details_sv.phtml
@@ -36,7 +36,7 @@
   <p>Därtill hanteras användarnas personuppgifter för att följa upp tjänstens användning med ett analyssystem. Systemet som används för användaranalyserna är konfigurerat så att användarens IP-adress anonymiseras. Det sker genom att IP-adressens två sista oktetter nollas. Analyssystemet används på servern vid CSC – IT-centret för vetenskap så att spårningsinformationen inte kommer utanför den säkra miljön. </p>
   <p>Analytiikkajärjestelmää käytetään CSC - Tieteen tietotekniikan keskus Oy:n  palvelimilla niin, etteivät jäljitystiedot pääse turvallisen ympäristön ulkopuolelle.</p>
   <p>När användaren besöker denna webbtjänst sparas informationen om händelsen (bl.a. IP-adressen) tillfälligt för hantering.</p>
-  <p>Grunden för hanteringen är den registeransvarigas berättigade intresse/allmänt intresse.</p>
+  <p>Grunden för hanteringen är den registeransvarigas berättigade intresse.</p>
 
   <h3>5. Uppgifter i registret</h3>
   <h4>Användarens basuppgifter</h4>
