Fix mobile table  on record page (#1026)

--- a/themes/finna2/less/finna/common.less
+++ b/themes/finna2/less/finna/common.less
@@ -210,7 +210,9 @@ table.content-table {
       }
     }
   }
-  table-layout: fixed;
+  @media (min-width: @screen-sm-min) {
+    table-layout: fixed;
+  }
 }
 .table.citation {
   table-layout: fixed;
