Swedish translation update (#1025)

--- a/themes/finna2/templates/content/privacy_sv.phtml
+++ b/themes/finna2/templates/content/privacy_sv.phtml
@@ -3,7 +3,7 @@
 
 <div class="page-content">
   <h2>Hantering av kunduppgifter i Finna</h2>
-  <p>När användaren loggar in på Finna-tjänsten från webbplatsen Finna.fi, en e-resurs skapad på Finna-plattformen eller något annat Finna-användargränssnitt, sparas följande uppgifter i tjänsten, beroende på inloggningssätt:
+  <p>När användaren loggar in på Finna-tjänsten från webbplatsen Finna.fi, ett webbibliotek skapat på Finna-plattformen eller något annat Finna-användargränssnitt, sparas följande uppgifter i tjänsten, beroende på inloggningssätt:
   </p>
   <p>Vid inloggning med bibliotekskort sparas kortets nummer och pinkod, användarens för- och efternamn, e-postadress och hembibliotek i tjänsten. Uppgifterna överförs automatiskt till Finna-tjänsten från systemet vid biblioteket som beviljat kortet.
   </p>
@@ -49,9 +49,9 @@
       <td>Det ställe där beställningar i första hand avhämtas, användaren kan ändra uppgiften i Finna</td>
     </tr>
   </table>
-  <p>I Finna-tjänsten kan användaren också själv spara och ändra sina personuppgifter. Till den e-postadress som sparas i Finna skickas bara sådana mejl som användaren själv önskar, t.ex. påminnelser om förfallodag och meddelanden från nyhetsbevakningen.
+  <p>I Finna-tjänsten kan användaren också själv spara och ändra sina personuppgifter. Till den e-postadress som sparas i Finna skickas bara sådana mejl som användaren själv önskar, t.ex. påminnelser om förfallodag och meddelanden från sökbevakningen.
   </p>
-  <p>Förutom de ovan nämnda uppgifterna kan Finna-tjänsten också spara information om användarens aktiviteter i Finna. Sådan information är bl.a. språk, aktiverad påminnelse om förfallodag, nyhetsbevakningar, poster som användaren har sparat i egna listor, bibliotekskort som användaren själv lagt till och sociala metadata (kommentarer, recensioner, nyckelord).
+  <p>Förutom de ovan nämnda uppgifterna kan Finna-tjänsten också spara information till följd av användarens aktiviteter i Finna. Sådan information är bl.a. språk, aktiverad påminnelse om förfallodag, sökbevakningar, poster som användaren har sparat i egna listor, bibliotekskort som användaren själv lagt till och sociala metadata (kommentarer, recensioner, taggar).
   </p>
   <p>För andra funktioner som hanterar användarnas uppgifter, t.ex. för att bläddra i lån, reserveringar och avgifter samt göra reserveringar och förnya lån, används bibliotekssystemets tjänstegränssnitt och uppgifterna sparas inte i Finna, med undantag för frivilliga påminnelser om förfallodag.  I samband med att en påminnelse om förfallodag skickas till användaren sparas ID-numret och förfallodagen för lånet, detta för att varje påminnelse bara ska skickas en gång.
   </p>
@@ -62,7 +62,7 @@
   <p>Närmare information finns i <a href="register_details">dataskyddsbeskrivningen</a>
   </p>
   <h2>Material och personuppgifter på Finna-tjänsten</h2>
-  <p>Ansvaret för material som erbjuds via Finna-tjänsten (webbplatsen Finna.fi, en e-resurs skapad på Finna-plattformen eller något annat Finna-användargränssnitt) och för metadata om materialet ligger hos organisationen som har överfört materialet till tjänsten. Material och metadata kan innehålla personuppgifter, t.ex. namn eller bilder på personer. Om en Finna-användare vill ställa frågor om personuppgifter i material eller metadata, eller exempelvis korrigera uppgifter eller kräva att uppgifter raderas, kan användaren kontakta arkivet, biblioteket eller museet som tillhandahåller materialet. Det går att göra via Kontaktformuläret som finns vid respektive material på webbplatsen Finna.fi. Om formuläret saknas i sökresultaten eller annan Finna-tjänst, kan man också använda e-resursens eller tjänstens eget feedbackformulär.
+  <p>Ansvaret för material som erbjuds via Finna-tjänsten (webbplatsen Finna.fi, ett webbibliotek skapat på Finna-plattformen eller något annat Finna-användargränssnitt) och för metadata om materialet ligger hos organisationen som har överfört materialet till tjänsten. Material och metadata kan innehålla personuppgifter, t.ex. namn eller bilder på personer. Om en Finna-användare vill ställa frågor om personuppgifter i material eller metadata, eller exempelvis korrigera uppgifter eller kräva att uppgifter raderas, kan användaren kontakta arkivet, biblioteket eller museet som tillhandahåller materialet. Det går att göra via Kontaktformuläret som finns vid respektive material på webbplatsen Finna.fi. Om formuläret saknas i sökresultaten eller annan Finna-tjänst, kan man också använda webbibliotekets eller tjänstens eget feedbackformulär.
   </p>
   <p>Om det i användarnas kommentarer till Finna-material finns personuppgifter som behöver korrigeras eller raderas, kan begäran skickas på formuläret vid kommentarerna.
   </p>
