--- a/themes/finna2/templates/content/register_details_sv.phtml
+++ b/themes/finna2/templates/content/register_details_sv.phtml
@@ -25,16 +25,15 @@
       <li>PB 26 (Ekogatan 4)</li>
       <li>00014 Helsingfors universitet</li>
       <li>Telefon: 050 576 2869</li>
-      <li>Sähköposti: erkki.tolonen(at)helsinki.fi</li>
+      <li>E-post: erkki.tolonen(at)helsinki.fi</li>
   </ul>
 
   <h3>3. Registrets namn</h3>
   <p>Finna-tjänstens register över kunduppgifter</p>
 
   <h3>4. Ändamålet med hanteringen av personuppgifter och grund för hanteringen</h3>
-  <p>Personuppgifterna hanteras för att upprätthålla kunduppgifternas entydighet och identifiera användarna som loggar in på Finna-tjänsten. Personuppgifterna hanteras också i syfte att erbjuda användarna kundfunktioner och individualiserade tjänster med hjälp av Finna. Ett exempel på en individualiserad tjänst är nyhetsbevakningen som skickar kunden e-postmeddelanden om nya poster i sökningen. Uppgifterna hanteras för produktionen av tjänsten vid Nationalbiblioteket (registeransvarig) och CSC – IT-centret för vetenskap (uppgiftshanterare).</p>
+  <p>Personuppgifterna hanteras för att upprätthålla kunduppgifternas entydighet och identifiera användarna som loggar in på Finna-tjänsten. Personuppgifterna hanteras också i syfte att erbjuda användarna kundfunktioner och individualiserade tjänster med hjälp av Finna. Ett exempel på en individualiserad tjänst är sökbevakningen som skickar kunden e-postmeddelanden om nya poster i sökningen. Uppgifterna hanteras för produktionen av tjänsten vid Nationalbiblioteket (registeransvarig) och CSC – IT-centret för vetenskap (uppgiftshanterare).</p>
   <p>Därtill hanteras användarnas personuppgifter för att följa upp tjänstens användning med ett analyssystem. Systemet som används för användaranalyserna är konfigurerat så att användarens IP-adress anonymiseras. Det sker genom att IP-adressens två sista oktetter nollas. Analyssystemet används på servern vid CSC – IT-centret för vetenskap så att spårningsinformationen inte kommer utanför den säkra miljön. </p>
-  <p>Analytiikkajärjestelmää käytetään CSC - Tieteen tietotekniikan keskus Oy:n  palvelimilla niin, etteivät jäljitystiedot pääse turvallisen ympäristön ulkopuolelle.</p>
   <p>När användaren besöker denna webbtjänst sparas informationen om händelsen (bl.a. IP-adressen) tillfälligt för hantering.</p>
   <p>Grunden för hanteringen är den registeransvarigas berättigade intresse.</p>
 
