--- a/themes/finna2/templates/content/help-syntax_sv.phtml
+++ b/themes/finna2/templates/content/help-syntax_sv.phtml
@@ -1,5 +1,5 @@
 <!-- START of: finna - content/help-syntax_sv.phtml -->
-<?php if ($this->resolver('Content/help-tabs.phtml')): ?>
+<?php if ($this->resolver('content/help-tabs.phtml')): ?>
     <?=$this->render('Content/help-tabs.phtml', ['activeTab' => 'help-syntax'])?>
 <?php endif; ?>
 <div>
