--- a/themes/finna2/templates/content/help-tabs.phtml
+++ b/themes/finna2/templates/content/help-tabs.phtml
@@ -1,4 +1,4 @@
-<!-- START of: finna - search/helpTabs.phtml -->
+<!-- START of: finna - Content/help-tabs.phtml -->
 <div class="finna-main-tabs">
     <ul class="nav nav-tabs help-tabs hidden-xs">
         <li <?php if($activeTab == "help"): ?> class="active"<?php endif; ?> >
@@ -37,4 +37,4 @@
         </div>
     </div>
 </div>
-<!-- END of: finna - search/helpTabs.phtml -->
+<!-- END of: finna - Content/help-tabs.phtml -->
