--- a/themes/finna2/templates/content/help_en-gb.phtml
+++ b/themes/finna2/templates/content/help_en-gb.phtml
@@ -1,6 +1,6 @@
 <!-- START of: finna - content/help_en-gb.phtml -->
-<?php if ($this->resolver('Content/help-tabs.phtml')): ?>
-  <?=$this->render('Content/help-tabs.phtml', ['activeTab' => 'help'])?>
+<?php if ($this->resolver('content/help-tabs.phtml')): ?>
+  <?=$this->render('content/help-tabs.phtml', ['activeTab' => 'help'])?>
 <?php endif; ?>
 <div>
   <div class="sidebar left">
@@ -8,8 +8,8 @@
     </div>
   </div>
   <div class="mainbody right">
-    <?php if ($this->resolver('Content/Additions/helpBegin.phtml')): ?>
-      <?=$this->render('Content/Additions/helpBegin.phtml')?>
+    <?php if ($this->resolver('content/Additions/helpBegin.phtml')): ?>
+      <?=$this->render('content/Additions/helpBegin.phtml')?>
     <?php endif; ?>
     <div id="begin1" class="content-section">
       <h2>How do I start a search on Finna?</h2>
@@ -34,8 +34,8 @@
       <p>There is an option to download some of the materials on Finna. Please remember to check the permissible uses information provided with each result.</p>
       <p>Many of the available materials can, for example, be used for educational purposes or for hobbies.</p>
     </div>
-    <?php if ($this->resolver('Content/Additions/helpEnd.phtml')): ?>
-      <?=$this->render('Content/Additions/helpEnd.phtml')?>
+    <?php if ($this->resolver('content/Additions/helpEnd.phtml')): ?>
+      <?=$this->render('content/Additions/helpEnd.phtml')?>
     <?php endif; ?>
   </div>
 </div>
