--- a/themes/finna2/templates/content/help_fi.phtml
+++ b/themes/finna2/templates/content/help_fi.phtml
@@ -1,6 +1,6 @@
 <!-- START of: finna - content/help_fi.phtml -->
-<?php if ($this->resolver('Content/help-tabs.phtml')): ?>
-  <?=$this->render('Content/help-tabs.phtml', ['activeTab' => 'help'])?>
+<?php if ($this->resolver('content/help-tabs.phtml')): ?>
+  <?=$this->render('content/help-tabs.phtml', ['activeTab' => 'help'])?>
 <?php endif; ?>
 <div>
   <div class="sidebar left">
@@ -8,8 +8,8 @@
     </div>
   </div>
   <div class="mainbody right">
-    <?php if ($this->resolver('Content/Additions/helpBegin.phtml')): ?>
-      <?=$this->render('Content/Additions/helpBegin.phtml')?>
+    <?php if ($this->resolver('content/Additions/helpBegin.phtml')): ?>
+      <?=$this->render('content/Additions/helpBegin.phtml')?>
     <?php endif; ?>
     <div id="begin1" class="content-section">
       <h2>Miten aloitan haun Finnassa?</h2>
@@ -34,8 +34,8 @@
       <p>Osaan aineistosta  tarjotaan latausmahdollisuus. Muistathan kuitenkin tarkistaa esimerkiksi kuvien käyttöoikeudet aineiston omista tiedoista.</p>
       <p>Aineistoa voi hyödyntää esimerkiksi opetuksen ja oppimisen tukena tai harrastuskäytössä.</p>
     </div>
-    <?php if ($this->resolver('Content/Additions/helpEnd.phtml')): ?>
-      <?=$this->render('Content/Additions/helpEnd.phtml')?>
+    <?php if ($this->resolver('content/Additions/helpEnd.phtml')): ?>
+      <?=$this->render('content/Additions/helpEnd.phtml')?>
     <?php endif; ?>
   </div>
 </div>
