[ALLI-5529] Additional case fixes of content help tabs rendering.

--- a/themes/finna2/templates/content/help-basic_en-gb.phtml
+++ b/themes/finna2/templates/content/help-basic_en-gb.phtml
@@ -1,6 +1,6 @@
 <!-- START of: finna - content/help-basic_en.phtml -->
 <?php if ($this->resolver('content/help-tabs.phtml')): ?>
-    <?=$this->render('Content/help-tabs.phtml', ['activeTab' => 'help-basic'])?>
+    <?=$this->render('content/help-tabs.phtml', ['activeTab' => 'help-basic'])?>
 <?php endif; ?>
 <div>
   <div class="sidebar left">
