--- a/themes/finna2/templates/content/help-syntax_en-gb.phtml
+++ b/themes/finna2/templates/content/help-syntax_en-gb.phtml
@@ -1,6 +1,6 @@
 <!-- START of: finna - content/help-syntax_en-gb.phtml -->
 <?php if ($this->resolver('content/help-tabs.phtml')): ?>
-    <?=$this->render('Content/help-tabs.phtml', ['activeTab' => 'help-syntax'])?>
+    <?=$this->render('content/help-tabs.phtml', ['activeTab' => 'help-syntax'])?>
 <?php endif; ?>
 <div>
   <div class="sidebar left">
