--- a/themes/finna2/templates/RecordDriver/DefaultRecord/data-authors.phtml
+++ b/themes/finna2/templates/RecordDriver/DefaultRecord/data-authors.phtml
@@ -1,8 +1,18 @@
 <?php //Don't add START and END comments ?>
-<?php if(!empty($data)): ?>
+<?php if (!empty($data)): ?>
 <div class="truncate-field">
   <?php foreach ($data as $index => $author): ?>
-    <?=($index > 0 ? '; ' : '')?><a href="<?=$this->record($this->driver)->getLink('author', $author['name'])?>"><?=$this->escapeHtml($author['name'])?></a><?php if (!empty($author['date'])): ?><span class="author-date">, <?=$this->escapeHtml($author['date']) ?></span><?php endif; ?><?php if (!empty($author['role'])): ?><span class="author-role">, <?=$this->escapeHtml($author['role']) ?></span><?php endif; ?>
+    <?php
+      $url = $this->record($this->driver)->getLink('author', $author['name']);
+      $label = $this->escapeHtml($author['name']);
+      $authorityLink = null;
+      if (!empty($author['id'])) {
+        $authorityLink = $this->authority()->link(
+          $url, $label, $author['id'], $author['type'], $author['role'], $this->driver
+        );
+      }
+    ?>
+    <? if (!empty($authorityLink)): ?><?=$authorityLink?><? else: ?><?=($index > 0 ? '<br/>' : '')?><a href="<?=$url?>"><?=$label?></a><?php if (!empty($author['date'])): ?><span class="author-date">, <?=$this->escapeHtml($author['date']) ?></span><?php endif; ?><?php if (!empty($author['role'])): ?><span class="author-role">, <?=$this->escapeHtml($author['role']) ?></span><?php endif; ?><? endif; ?>
   <?php endforeach; ?>
 </div>
 <?php endif; ?>
