--- a/themes/finna2/templates/RecordDriver/DefaultRecord/data-contributors-single.phtml
+++ b/themes/finna2/templates/RecordDriver/DefaultRecord/data-contributors-single.phtml
@@ -8,7 +8,7 @@
     );
   }
 ?>
-<? if (!empty($authorityLink)): ?><?=$authorityLink?><? else: ?><a href="<?=$url?>"><?=$label?></a><?php if (!empty($author['date'])): ?><span class="author-date">, <?=$this->escapeHtml($author['date']) ?></span><?php endif; ?><?php if (!empty($author['role'])): ?><span class="author-role">, <?=mb_strtolower($this->transEsc('CreatorRoles::' . $author['role']), 'UTF-8') ?></span><?php endif; ?><? endif; ?>
+<?php if (!empty($authorityLink)): ?><?=$authorityLink?><?php else: ?><a href="<?=$url?>"><?=$label?></a><?php if (!empty($author['date'])): ?><span class="author-date">, <?=$this->escapeHtml($author['date']) ?></span><?php endif; ?><?php if (!empty($author['role'])): ?><span class="author-role">, <?=mb_strtolower($this->transEsc('CreatorRoles::' . $author['role']), 'UTF-8') ?></span><?php endif; ?><?php endif; ?>
 <?php if (!empty($author['description'])): ?>
   <span class="author-description"> (<?=$this->escapeHtml($author['description'])?>)</span>
 <?php endif; ?>
