--- a/themes/finna2/templates/RecordDriver/DefaultRecord/link-authority.phtml
+++ b/themes/finna2/templates/RecordDriver/DefaultRecord/link-authority.phtml
@@ -1,7 +1,7 @@
 <?php //Don't add START and END comments ?>
 <div class="authority ajax-content" data-authority="<?=$this->id?>" data-source="<?=$this->recordSource?>" data-type="<?=$this->type?>">
   <a href="<?=$this->url?>">
-    <?=$this->label?><?php if (!empty($this->role)): ?><span class="role">, <?=mb_strtolower($this->transEsc('CreatorRoles::' . $this->role), 'UTF-8') ?></span><?endif?>
+    <?=$this->label?><?php if (!empty($this->role)): ?><span class="role">, <?=mb_strtolower($this->transEsc('CreatorRoles::' . $this->role), 'UTF-8') ?></span><?php endif; ?>
     <i class="show-info fa fa-arrow-down"><span class="sr-only"><?=$this->transEsc('more_info_toggle')?></span></i>
     <i class="hide-info fa fa-arrow-up"><span class="sr-only"><?=$this->transEsc('more_info_toggle')?></span></i>
   </a>
