Fix authority search.

--- a/themes/finna2/templates/search/searchbox.phtml
+++ b/themes/finna2/templates/search/searchbox.phtml
@@ -19,6 +19,9 @@
         case 'search2':
             $this->searchClassId = 'Search2';
             break;
+        case 'authority':
+            $this->searchClassId = 'SolrAuth';
+            break;
         default:
             $this->searchClassId = 'Solr';
         }
